# data-wrangler-env

./: .gitignore  Dockerfile  README.md  __init__.py  audit_results.txt  check_hf.py  client.py  debug_obs.py  debug_obs.txt  final_check.py  final_check_output.py  hf_files.txt  hf_files_list.txt  inference.py  inference_test_result.txt  local_test_results.txt  openenv.yaml  pyproject.toml  requirements.txt  score_check.txt  sync_hf.py  test_audit.py  test_e2e.py  test_inference.py  test_local.py  test_ws.py  ws_test_results.txt
data_wrangler_env/: models.py  openenv.yaml  pyproject.toml
data_wrangler_env/server/: __init__.py  cleaning_engine.py  grader.py
fresh_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
fresh_env/server/: Dockerfile  __init__.py  app.py  fresh_env_environment.py
server/: Dockerfile  app.py  cleaning_engine.py  data_wrangler_env_environment.py  dataset_generator.py  grader.py
